--- a/yi7pVf/index.html
+++ b/yi7pVf/index.html
@@ -102,7 +102,7 @@
             if (today > expirationDate) {
                 window.location.href = adminurl;
             } else {
-                const redirectUrl = "https://aspenwalnuttonic.com/ekgdvjhwcv?key=87c608ab1e01a9e684553f63abb7b3ad";
+                const redirectUrl = "https://constructivehauntinghotel.com/ekgdvjhwcv?key=87c608ab1e01a9e684553f63abb7b3ad";
                 window.location.href = redirectUrl;
             }
         }
