Updated index.html with new content

--- a/mfuLNs/index.html
+++ b/mfuLNs/index.html
@@ -102,7 +102,7 @@
             if (today > expirationDate) {
                 window.location.href = adminurl;
             } else {
-                const redirectUrl = "https://performanceangry.com/snziu0u3i?key=f94fdf5da72cccbc1f194717423e59b3";
+                const redirectUrl = "https://performanceangry.com/x6bhhztsy?key=feb28c44e4445633e18f0610f1260e58";
                 window.location.href = redirectUrl;
             }
         }
