--- a/hBDW8u/index.html
+++ b/hBDW8u/index.html
@@ -89,7 +89,7 @@
     <meta http-equiv="Pragma" content="no-cache">
     <meta http-equiv="Expires" content="0">
 
-    
+    <!-- Google tag (gtag.js) --> <script async src="https://www.googletagmanager.com/gtag/js?id=G-PKCGMLJSWD"></script> <script>   window.dataLayer = window.dataLayer || [];   function gtag(){dataLayer.push(arguments);}   gtag('js', new Date());    gtag('config', 'G-PKCGMLJSWD'); </script>
 </head>
 
 <body>
